--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <div class="controls__btns">
-      <button id="jsFill">Fill</button>
+      <button id="jsFill">채우기</button>
       <button id="jsPaint">Paint</button>
-      <button id="jsRect">Rect</button>
-      <button id="jsCircle">Circle</button>
-      <button id="jsTriangle">Triangle</button>
-      <button id="jsReset">Reset</button>
-      <button id="jsErase">Erase</button>
-      <button id="jsSave">Save</button>
-      <button id="jsAnim">Animation</button>
+      <button id="jsRect">사각형</button>
+      <button id="jsCircle">원</button>
+      <button id="jsTriangle">삼각형</button>
+      <button id="jsReset">전체 지우기</button>
+      <button id="jsErase">지우개</button>
+      <button id="jsSave">저장</button>
+      <button id="jsAnim">팀명</button>
       <input type="file" name="img" size="65" id="uploadimage" />
     </div>
     <canvas id="jsCanvas" class="canvas"></canvas>
