--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="controls__btns">
       <button id="jsFill">채우기</button>
-      <button id="jsPaint">Paint</button>
+      <button id="jsPaint">붓</button>
       <button id="jsRect">사각형</button>
       <button id="jsCircle">원</button>
       <button id="jsTriangle">삼각형</button>
