--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button id="jsReset">전체 지우기</button>
       <button id="jsErase">지우개</button>
       <button id="jsSave">저장</button>
-      <button id="jsAnim">워터마크</button>
+      <button id="jsAnim">애니메이션</button>
       <input type="file" name="img" size="65" id="uploadimage" />
     </div>
     <canvas id="jsCanvas" class="canvas"></canvas>
